# surreal-rust

./: .gitignore  .gitmodules  Cargo.toml  Overview.drawio  README.md  TODO  TODO.md  build.rs  rust-toolchain.toml  rustfmt.toml
backends/gba/: Cargo.toml
backends/gba/examples/: hello-gba.rs
backends/gba/src/: lib.rs
backends/sdl/: Cargo.toml
backends/sdl/examples/: hello-sdl.rs
backends/sdl/src/: audio.rs  graphics.rs  input.rs  lib.rs
backends/sdl2/: Cargo.toml
backends/sdl2/src/: lib.rs
backends/wgpu/: Cargo.toml
backends/wgpu/examples/: hello-wgpu.rs
backends/wgpu/src/: graphics.rs  input.rs  lib.rs
common/: Cargo.toml
common/src/: abstractions.rs  collections.rs  concurrency.rs  diagnostics.rs  gc.rs  io.rs  lib.rs  maths.rs  strings.rs  utilities.rs
common/src/abstractions/: assets.rs  clipboard.rs  scenes.rs  services.rs  variant.rs
common/src/collections/: anymap.rs  arena.rs  freelist.rs  graphs.rs  grid.rs  multimap.rs  priorityqueue.rs  quadtree.rs  resources.rs  ringbuffer.rs  snapshotvec.rs  spatialhash.rs
common/src/concurrency/: futures.rs
common/src/diagnostics/: debugging.rs  logging.rs  metrics.rs  profiling.rs  server.rs  telemetry.rs
common/src/io/: binary.rs  packed.rs  pak.rs  serde.rs  serialization.rs  streams.rs  vfs.rs  virtualfs.rs
common/src/maths/: angles.rs  cameras.rs  curves.rs  geometry.rs  hex.rs  interpolation.rs  linear.rs  neighbours.rs  paths.rs  random.rs  ranges.rs  rectangles.rs  shapes.rs  size.rs  splines.rs  viewports.rs
common/src/strings/: names.rs  spans.rs
common/src/utilities/: events.rs  reflect.rs  services.rs  settings.rs  size.rs  time.rs  timing.rs  variant.rs  version.rs
common/tests/: asset-database.rs
core/: Cargo.toml  README.md
core/audio/: Cargo.toml
core/audio/src/: clips.rs  headless.rs  lib.rs
core/common/: Cargo.toml
core/common/src/: abstractions.rs  collections.rs  concurrency.rs  diagnostics.rs  io.rs  lib.rs  lua.rs  maths.rs  memory.rs  network.rs  scenes.rs  tools.rs  utilities.rs
core/graphics/: Cargo.toml
core/graphics/assets/: test.ase
core/graphics/src/: animations.rs  buffers.rs  geometry.rs  images.rs  internal.rs  lib.rs  materials.rs  meshes.rs  rendering.rs  shaders.rs  sprites.rs  targets.rs  textures.rs
core/input/: Cargo.toml
core/input/src/: keyboards.rs  lib.rs  mouse.rs
core/lua/: Cargo.toml
core/lua/src/: lib.rs
core/macros/: Cargo.toml
core/macros/src/: assets.rs  formats.rs  lib.rs  objects.rs  profiling.rs  reflect.rs  singleton.rs  uniforms.rs  vertex.rs
core/networking/: Cargo.toml
core/networking/src/: lib.rs
core/physics/: Cargo.toml
core/physics/src/: backend.rs  engine.rs  homebaked.rs  lib.rs
core/scenes/: Cargo.toml
core/scenes/src/: canvas.rs  lib.rs  shared.rs  spatial.rs  templates.rs
core/scripting/: Cargo.toml
core/scripting/src/: lang.rs  lib.rs  lua.rs  runtime.rs
core/scripting/tests/: wren.rs
core/src/: assets.rs  audio.rs  binding.rs  collections.rs  diagnostics.rs  engine.rs  fibers.rs  graphics.rs  graphs.rs  il8n.rs  input.rs  io.rs  lib.rs  maths.rs  physics.rs  scene.rs  scripting.rs  ui.rs  utilities.rs
core/src/audio/: headless.rs  rodio.rs  sources.rs
core/src/collections/: anymap.rs  arena.rs  graphs.rs  grid.rs  gridlist.rs  multimap.rs  priorityqueue.rs  quadtree.rs  resources.rs  ringbuffer.rs  skiplist.rs  spatial.rs
core/src/diagnostics/: console.rs  logging.rs  profiling.rs
core/src/graphics/: buffers.rs  colors.rs  fonts.rs  geometry.rs  headless.rs  images.rs  materials.rs  meshes.rs  opengl.rs  painting.rs  palettes.rs  rendering.rs  shaders.rs  sprites.rs  targets.rs  textures.rs  wgpu.rs
core/src/input/: keyboard.rs  mouse.rs
core/src/io/: pak.rs  vfs.rs
core/src/maths/: aabb.rs  angles.rs  curves.rs  linear.rs  neighbours.rs  numbers.rs  paths.rs  random.rs  ranges.rs  rectangles.rs  shapes.rs  tessellation.rs  tweens.rs
core/src/utilities/: fsm.rs  object.rs  parsing.rs  resources.rs  servers.rs  services.rs  singleton.rs  size.rs  timing.rs  variant.rs  version.rs
core/tests/: graphics-tests.rs  graphics.rs
core/tests/common/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: abstractions.rs  collections.rs  diagnostics.rs  io.rs  lib.rs  maths.rs  strings.rs  utilities.rs
crates/graphics/: Cargo.toml
crates/graphics/assets/: test.pyxel
crates/graphics/src/: animations.rs  buffers.rs  colors.rs  geometry.rs  headless.rs  images.rs  lib.rs  lighting.rs  materials.rs  meshes.rs  opengl.rs  rendering.rs  shaders.rs  sprites.rs  targets.rs  textures.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: callbacks.rs  interop.rs  lang.rs  lib.rs  runtime.rs  values.rs  variant.rs
editor/: Cargo.toml  README.md
editor/docs/: README.md
editor/src/: assets.rs  documents.rs  domain.rs  events.rs  hosting.rs  lib.rs  main.rs  projects.rs  reflect.rs  reflection.rs  registry.rs  resources.rs  scenes.rs  serialization.rs  serialize.rs  ui.rs  windows.rs
editor/src/assets/: importers.rs
editor/src/ui/: content.rs  game.rs  graphs.rs  inspector.rs  panels.rs  scene.rs  undo.rs  widgets.rs  windows.rs
editor/src/windows/: game.rs  projects.rs
editor/tests/: assets-database-tests.rs  assets.rs
editor/tests/assets/: test.yml
editor/tests/common/: mod.rs
modules/assets/: Cargo.toml
modules/assets/src/: exporters.rs  importers.rs  lib.rs
modules/assets/tests/: asset-database.rs
modules/ecs/: Cargo.toml
modules/ecs/src/: diagnostics.rs  lib.rs
modules/ecs/tests/: ecs-api.rs
modules/graphics/: Cargo.toml
modules/graphics/shaders/: canvas-standard.glsl  mesh-skinned.glsl  sprite-multitex.glsl  sprite-standard.glsl
modules/graphics/src/: animations.rs  buffers.rs  cameras.rs  colors.rs  fonts.rs  geometry.rs  headless.rs  images.rs  lib.rs  materials.rs  meshes.rs  opengl.rs  palettes.rs  rendering.rs  shaders.rs  skinning.rs  sprites.rs  targets.rs  textures.rs  window.rs
modules/scripting/: Cargo.toml
modules/scripting/src/: basic.rs  gdscript.rs  lib.rs  lua.rs
servers/graphics/: Cargo.toml
src/: assets.rs  (+30 more)
(+661 files in other folders)
