[package]
name = "surreal"
description = "The Surreal game engine"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Matt Kleinschafer <xeusalmighty@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace]
members = ["crates/*", "backends/*"]

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["audio", "graphics", "input", "scripting"]

[workspace.dependencies]
# shared dependencies
bitflags = "2.1.0"

[dependencies]
# core
common = { package = "surreal-common", path = "./crates/common" }
editor = { package = "surreal-editor", path = "./editor", optional = true }

# backends
sdl = { package = "surreal-backend-sdl", path = "./backends/sdl", optional = true }

# crates
audio = { package = "surreal-audio", path = "./crates/audio", optional = true }
graphics = { package = "surreal-graphics", path = "./crates/graphics", optional = true }
input = { package = "surreal-input", path = "./crates/input", optional = true }
scripting = { package = "surreal-scripting", path = "./crates/scripting", optional = true }

[[example]]
name = "sprites"
required-features = ["sdl"]

[[example]]
name = "hello-world"
required-features = ["sdl"]

