[package]
name = "surreal"
description = "The Surreal game engine"
authors.workspace = true
edition.workspace = true
version.workspace = true

[workspace.package]
authors = ["Matt Kleinschafer <xeusalmighty@gmail.com>"]
edition = "2021"
version = "0.1.0"

[workspace]
members = ["core/*", "backends/*"]

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["audio", "graphics", "input", "lua"]
lua = ["common/lua"]

[workspace.dependencies]
# shared dependencies
bitflags = "2.1.0"

[dependencies]
# core
common = { package = "surreal-common", path = "./core/common" }
audio = { package = "surreal-audio", path = "./core/audio", optional = true }
graphics = { package = "surreal-graphics", path = "./core/graphics", optional = true }
input = { package = "surreal-input", path = "./core/input", optional = true }
networking = { package = "surreal-networking", path = "./core/networking", optional = true }
physics = { package = "surreal-physics", path = "./core/physics", optional = true }
scenes = { package = "surreal-scenes", path = "./core/scenes", optional = true }
scripting = { package = "surreal-scripting", path = "./core/scripting", optional = true }

# editor
editor = { package = "surreal-editor", path = "./editor", optional = true }

# backends
sdl = { package = "surreal-backend-sdl", path = "./backends/sdl", optional = true }

[[example]]
name = "sprites"
required-features = ["sdl"]

[[example]]
name = "hello-world"
required-features = ["sdl"]

