[package]
name = "surreal-common"
authors.workspace = true
edition.workspace = true

[dependencies]
macros = { package = "surreal-macros", path = "../macros" }

# core dependencies
glam = { version = "0.25.0", features = ["serde"] }
rustc-hash = "1.1.0"
smallvec = "1.8"
uuid = { version = "1.2.2", features = ["serde"] }

# serde and friends
serde = { workspace = true, features = ["derive"], optional = true }
binary = { package = "bincode", version = "1.3.3", optional = true }
json = { package = "serde_json", version = "1.0.91", optional = true }
ron = { version = "0.8.0", optional = true }
toml = { version = "0.8.8", optional = true }
yaml = { package = "serde_yaml", version = "0.9", optional = true }
xml = { package = "serde-xml-rs", version = "0.6.0", optional = true }

# platform dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
