[package]
name = "surreal-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["binary", "json", "yaml"]

[dependencies]
macros = { package = "surreal-macros", path = "../macros" }

# core dependencies
ab_glyph = "0.2"
anyhow = "1.0.66"
bitflags = "1.3.2"
bytemuck = { version = "1.12.3", features = ["derive"] }
chrono = "0.4"
egui = "0.21.0"
glam = { version = "0.23.0", features = ["serde"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "ico"] }
lazy_static = "1.4.0"
log = "0.4"
once_cell = "1.17.0"
puffin = "0.14.1"
puffin_egui = "0.20.0"
rustc-hash = "1.1.0"
slotmap = { version = "1.0.6", features = ["serde"] }
smallvec = "1.8"
thiserror = "1.0.30"
uuid = { version = "1.2.2", features = ["serde"] }

# serde and friends
serde = { version = "1.0.152", features = ["derive"] }
binary = { package = "bincode", version = "1.3.3", optional = true }
json = { package = "serde_json", version = "1.0.91", optional = true }
ron = { version = "0.8.0", optional = true }
toml = { version = "0.7.1", optional = true }
yaml = { package = "serde_yaml", version = "0.9", optional = true }
xml = { package = "serde-xml-rs", version = "0.6.0", optional = true }

# platform dependencies
gl = "0.14.0"
glutin = "0.30.3"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
rodio = "0.17.0"
winit = "0.28.1"
