[package]
name = "surreal-editor"
description = "The visual editor for the Surreal project"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
# core dependencies
common = { package = "surreal-common", path = "../crates/common" }
audio = { package = "surreal-audio", path = "../crates/audio" }
graphics = { package = "surreal-graphics", path = "../crates/graphics" }
input = { package = "surreal-input", path = "../crates/input" }
sdl = { package = "surreal-backend-sdl", path = "../backends/sdl" }

# third-party dependencies
serde = { version = "1.0.159", features = ["derive"], optional = true }
