[package]
name = "surreal-sdl"
description = "SDL bindings for Surreal"
authors.workspace = true
edition.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../../common" }
audio = { package = "surreal-audio", path = "../../modules/audio" }
graphics = { package = "surreal-graphics", path = "../../modules/graphics" }
input = { package = "surreal-input", path = "../../modules/input" }
sdl2-sys = { version = "0.36.0", features = ["bundled"] }
