[package]
name = "surreal-backend-sdl"
description = "SDL backend for Surreal"
authors.workspace = true
edition.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../../crates/common" }
audio = { package = "surreal-audio", path = "../../crates/audio" }
graphics = { package = "surreal-graphics", path = "../../crates/graphics" }
input = { package = "surreal-input", path = "../../crates/input" }
sdl2-sys = { version = "0.36.0", features = ["bundled"] }
