[package]
name = "surreal-backend-sdl"
description = "SDL backend for Surreal"
authors.workspace = true
edition.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../../core/common" }
audio = { package = "surreal-audio", path = "../../core/audio" }
graphics = { package = "surreal-graphics", path = "../../core/graphics" }
input = { package = "surreal-input", path = "../../core/input" }

# platform dependencies
sdl2-sys = { version = "0.37.0", features = ["use-pkgconfig"] }
openal-sys = "1.16.0"
gl = "0.14.0"
