[package]
name = "surreal-common"
authors.workspace = true
edition.workspace = true

[dependencies]
macros = { package = "surreal-macros", path = "../macros" }

# core dependencies
glam = { version = "0.28.0", features = ["serde"] }
rustc-hash = "1.1.0"
smallvec = "1.8"
uuid = { version = "1.8.0", features = ["serde"] }
flate2 = "1.0.30"

# platform dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
