[package]
name = "surreal-scripting"
description = "Scripting engine for Surreal"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../common" }
mlua = { version = "0.9.9", features = ["vendored", "lua54"], optional = true }
quick-js = { version = "0.4.1", optional = true }

[features]
lua = ["mlua"]
javascript = ["quick-js"]