[package]
name = "surreal-assets"
description = "Asset engine for Surreal"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../../common" }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.26"
