[package]
name = "surreal-ecs"
description = "A simple, fast, and flexible entity-component-system library for Surreal"
authors.workspace = true
edition.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../../common" }
macros = { package = "surreal-macros", path = "../../macros" }
graphics = { package = "surreal-graphics", path = "../graphics" }
serde = { workspace = true, optional = true }
