[package]
name = "surreal-graphics"
description = "Surreal graphics engine"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
surreal = { package = "surreal-core", path = "../../core" }
serde = { version = "1.0.159", features = ["derive"] }
gl = "0.14.0"
thiserror = "1.0.26"
