[package]
name = "surreal-graphics"
description = "Surreal graphics engine"
authors.workspace = true
edition.workspace = true

[dependencies]
common = { package = "surreal-common", path = "../../common" }
macros = { package = "surreal-macros", path = "../../macros" }
serde = { workspace = true, optional = true }
bitflags = { workspace = true }

# local dependencies
image = { version = "0.24.8", default-features = false, features = ["png"] }
gl = "0.14.0"
