[package]
name = "surreal-scripting"
version = "0.1.0"
edition = "2021"

[features]
gdscript = ["chumsky"]
lua = ["mlua"]

[dependencies]
surreal = { package = "surreal-core", path = "../../core" }
chumsky = { version = "0.8.0", optional = true }
mlua = { version = "0.8.6", features = ["vendored", "lua54"], optional = true }