[package]
name = "surreal-graphics"
version = "0.1.0"
edition = "2021"

[features]
default = ["backend-wgpu"]

# rendering pipelines
pipeline-universal = []
pipeline-highdef = []

# rendering backends
backend-headless = []
backend-opengl = ["gl", "glutin"]
backend-vulkan = ["vulkano", "vulkano-win"]
backend-wgpu = ["wgpu"]

[dependencies]
surreal = { package = "surreal-core", path = "../../core" }
bitflags = "1.3"
bytemuck = "1.12.3"
gl = { version = "0.14", optional = true }
glutin = { version = "0.28.0", default-features = false, features = ["x11"], optional = true }
vulkano = { version = "0.32.3", optional = true }
vulkano-win = { version = "0.32.0", optional = true }
winit = "0.27.5"
wgpu = { version = "0.14.2", default-features = false, optional = true }

[dev-dependencies]
pollster = "0.2.5"