[package]
name = "surreal-graphics"
version = "0.1.0"
edition = "2021"

[features]
default = []

# rendering pipelines
pipeline-universal = []
pipeline-highdef = []

[dependencies]
surreal = { package = "surreal-core", path = "../../core" }
bitflags = "1.3"
bytemuck = "1.12.3"
wgpu = "0.14.2"
winit = "0.27.5"

[dev-dependencies]
pollster = "0.2.5"