[package]
name = "surreal-graphics"
version = "0.1.0"
edition = "2021"

[features]
default = []
urp = []
hdrp = []

[dependencies]
surreal = { package = "surreal-core", path = "../../core" }
naga = { version = "0.10.0", features = ["spv-in", "spv-out", "span"] }
wgpu = "0.14.2"
winit = "0.27.5"

[dev-dependencies]
pollster = "0.2.5"
once_cell = "1.17.0"

[[example]]
name = "hello-graphics"
required-features = ["urp"]